# TumiRobotsJFC

./: README.md
JFC-main/: README.md  split.py
JFC-main/Pointnet_Pointnet2_pytorch/: test_semseg.py  train_semseg.py
JFC-main/Pointnet_Pointnet2_pytorch/data_utils/: S3DISDataLoader.py  collect_indoor3d_data.py  indoor3d_util.py
JFC-main/Pointnet_Pointnet2_pytorch/data_utils/meta/: anno_paths.txt  class_names.txt
JFC-main/preprocessing/: CMakeLists.txt
JFC-main/preprocessing/src/: KNNFilter.h  NormalCompute.h  PCDPreprocessor.cpp  main_filter.cpp  read_pcd.cpp
